--- a/shop.html
+++ b/shop.html
@@ -33,37 +33,37 @@
         <nav>
             <ul class="lista-loja">
                 <li class="lista-loja__itens">
-                    <a href="../html/item_violao.html">
+                    <a href="html/item_violao.html">
                         <img class="lista-loja__img" src="img/violao_item.jpg">
                         <h2 class="lista-loja__titulo">Violão Acústico Clássico 6 Cordas Nylon Preto Aubvo611 Auburn<br>Preço: R$169,90</h2>
                     </a>
                 </li>
                 <li class="lista-loja__itens">
-                    <a href="../html/item_piano.html">
+                    <a href="html/item_piano.html">
                         <img class="lista-loja__img" src="img/teclado_item.jpg">
                         <h2 class="lista-loja__titulo">Teclado Yamaha NP12 Piaggero Piano Piano Digital + Estante<br>Preço: R$1.469,00</h2>
                     </a>
                 </li>
                 <li>
-                    <a href="../html/item_bongo.html">
+                    <a href="html/item_bongo.html">
                         <img class="lista-loja__img" src="img/bongo_item.jpg">
                         <h2 class="lista-loja__titulo">Bongô madeira natural 6 e 7 polegadas<br>Preço: R$249,00</h2>
                     </a>
                 </li>
                 <li class="lista-loja__itens">
-                    <a href="../html/item_bateria.html">
+                    <a href="html/item_bateria.html">
                         <img class="lista-loja__img" src="img/bateria_item.jpg">
                         <h2 class="lista-loja__titulo">Bateria Premium Dx35J Vermelha Junior<br>Preço: R$884,52</h2>
                     </a>
                 </li>
                 <li class="lista-loja__itens">
-                    <a href="../html/item_flauta.html">
+                    <a href="html/item_flauta.html">
                         <img class="lista-loja__img" src="img/flauta_item.jpg">
                         <h2 class="lista-loja__titulo">Flauta Transversal Niquelada Com Estojo<br>Preço: R$779,00</h2>
                     </a>
                 </li>
                 <li class="lista-loja__itens">
-                    <a href="../html/item_ganza.html">
+                    <a href="html/item_ganza.html">
                         <img class="lista-loja__img" src="img/ganza_item.jpg">
                         <h2 class="lista-loja__titulo">Ganza Aluminio Polido Torelli 210 X 55 Mm Tg551 Profissional<br>Preço: R$38,75</h2>
                     </a>
