--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="lista-loja__itens">
-                    <a href="html/item_bateria.html">
+                    <a href="item_bateria.html">
                         <img class="lista-loja__img" src="img/bateria_item.jpg">
                         <h2 class="lista-loja__titulo">Bateria Premium Dx35J Vermelha Junior<br>Preço: R$884,52</h2>
                     </a>
