--- a/item_bateria.html
+++ b/item_bateria.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Bateria Premium Dx35J Vermelha Junior</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$884,52</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/bateria_item.jpg" alt="Bateria Premium Dx35J Vermelha Junior">
+                <img class="lista-loja__img-tlcompra" src="img/bateria_item.jpg" alt="Bateria Premium Dx35J Vermelha Junior">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
