--- a/item_bongo.html
+++ b/item_bongo.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Bongô madeira natural 6 e 7 polegadas</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$249,00</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/bongo_item.jpg" alt="">
+                <img class="lista-loja__img-tlcompra" src="img/bongo_item.jpg" alt="">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
