--- a/item_flauta.html
+++ b/item_flauta.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Flauta Transversal Niquelada Com Estojo</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$779,00</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/flauta_item.jpg" alt="Flauta Transversal Niquelada Com Estojo">
+                <img class="lista-loja__img-tlcompra" src="img/flauta_item.jpg" alt="Flauta Transversal Niquelada Com Estojo">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
