--- a/item_ganza.html
+++ b/item_ganza.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Ganza Aluminio Polido Torelli 210 X 55 Mm Tg551 Profissional</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$38,75</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/ganza_item.jpg" alt="Ganza Aluminio Polido Torelli 210 X 55 Mm Tg551 Profissional">
+                <img class="lista-loja__img-tlcompra" src="img/ganza_item.jpg" alt="Ganza Aluminio Polido Torelli 210 X 55 Mm Tg551 Profissional">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
