--- a/item_violao.html
+++ b/item_violao.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Violão Acústico Clássico 6 Cordas Nylon Preto Aubvo611 Auburn</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$169,90</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/violao_item.jpg" alt="">
+                <img class="lista-loja__img-tlcompra" src="img/violao_item.jpg" alt="">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
