--- a/item_piano.html
+++ b/item_piano.html
@@ -29,7 +29,7 @@
             <section>
                 <h2 class="text-center">Teclado Yamaha NP12 Piaggero Piano Piano Digital + Estante</h2><br>
                 <h3 class="tlcompra-preco">Preço: R$1.469,90</h3>
-                <img class="lista-loja__img-tlcompra" src="../img/teclado_item.jpg" alt="">
+                <img class="lista-loja__img-tlcompra" src="img/teclado_item.jpg" alt="">
                 <button class="btn-compra1" onclick="ativar()" name="botao-caixa">Comprar</button>
                 <button class="btn-compra2" onclick="ativar()" name="botao-carrinho">Adicionar ao carrinho</button>
             </section>
