--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <title>Sobre Nós | Instrumentos Plaza</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="icon" type="image/png" href="../img/Icons8-Windows-8-Music-Piano.ico">
+    <link rel="icon" type="image/png" href="img/Icons8-Windows-8-Music-Piano.ico">
 </head>
 <body>
     <header class="cabecalho">
